# Snowfall3D_OpenGL

./: CMakeLists.txt  GRAPHICS_KNOWLEDGE.md  README.md  RUN_GUIDE.md  TREE_MODEL_SETUP.md
.claude/: settings.json
include/: Camera.h  CloudSystem.h  Light.h  Particle.h  ParticleSystem.h  Shader.h  Skybox.h  Snowman.h  Terrain.h  Vegetation.h
shaders/: cloud.vert  leaf.frag  particle.frag  particle.vert  skybox.frag  terrain.vert
src/: Camera.cpp  CloudSystem.cpp  Light.cpp  ParticleSystem.cpp  Shader.cpp  Skybox.cpp  Snowman.cpp  Terrain.cpp  Vegetation.cpp  main.cpp
